@@ -1,5 +1,7 @@
 2010-04-26  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/HP-DeskJet_F300.xml: Removed incorrect
+	  IEEE 1284 Device ID (bug #585644).
 	* db/source/printer/HP-Color_LaserJet_2605dn.xml: Added from
 	  2605 template, with correct IEEE 1284 Device ID (bug #583909).
 
